# project-pong

./: .gitignore  Cargo.toml  README.md  devbox.json  rust-toolchain.toml
.cargo/: config.toml
cli_harness/: Cargo.toml
cli_harness/src/: main.rs
clients/terminal/: Cargo.toml  package-lock.json  package.json
clients/terminal/src/: app.rs  event.rs  main.rs  rtc_transport.rs  ui.rs
clients/web/: .gitignore  index.html  package-lock.json  package.json
clients/web/src/: GameRenderer.ts  GameStateManager.ts  InputManager.ts  MobileController.ts  ai.ts  constants.ts  game.ts  lockstep.ts  main.ts  peer_qr_utils.ts  peer_transport.ts  qr_utils.ts  rtc_transport.ts  screens.ts  types.ts
clients/web/src/styles/: main.css  peer_id.css  peer_qr.css
pong_core/: Cargo.toml
pong_core/src/: game.rs  lib.rs  lockstep.rs  physics.rs  serialization.rs  transport.rs  types.rs  wasm.rs  wire_protocol.rs
