[package]
name = "pong_core"
version = "0.1.0"
edition = "2021"
description = "Deterministic Pong game engine with fixed-point physics"
license = "MIT"

[dependencies]
# Core dependencies - minimal for determinism
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
optional = true

[features]
default = []
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "serde",
    "serde_json",
    "console_error_panic_hook",
]

[lib]
name = "pong_core"
crate-type = ["lib", "cdylib"]
